--- a/src/components/projectList/index.scss
+++ b/src/components/projectList/index.scss
@@ -1,15 +1,15 @@
 .projects {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 40px;
-  margin: 6rem 2rem;
-  margin-top: 10rem;
+  gap: 40px;
+  margin: 12rem 2rem;
 }
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .projects {
     grid-template-columns: 1fr;
+    margin: 12rem 1rem;
   }
 }
 
@@ -17,6 +17,7 @@
 @media (min-width: 576px) {
   .projects {
     grid-template-columns: 1fr;
+    margin: 12rem 1rem;
   }
 }
 
